force-app/main/default/objects/CustomerProperty/fields/Building_Number__c.field-meta.xml
<CustomField>
    <fullName>Building_Number__c</fullName>
    <label>Building Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>