force-app/main/default/objects/CustomerProperty/fields/Cognisure_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Cognisure_External_Id__c</fullName>
    <description>Cognisure External Id</description>
    <externalId>true</externalId>
    <inlineHelpText>External Id generated by Cognisure</inlineHelpText>
    <label>Cognisure External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>