force-app/main/default/objects/CustomerProperty/fields/Heating_Year__c.field-meta.xml
<CustomField>
    <fullName>Heating_Year__c</fullName>
    <label>Heating Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>