force-app/main/default/objects/CustomerProperty/fields/Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Occupancy__c</fullName>
    <description>Occupancy Description</description>
    <label>Occupancy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>