force-app/main/default/objects/CustomerProperty/fields/Plumbing_Year__c.field-meta.xml
<CustomField>
    <fullName>Plumbing_Year__c</fullName>
    <label>Plumbing Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>