force-app/main/default/objects/CustomerProperty/fields/Premises_Number__c.field-meta.xml
<CustomField>
    <fullName>Premises_Number__c</fullName>
    <label>Premises Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>