force-app/main/default/objects/CustomerProperty/fields/Protection_Class__c.field-meta.xml
<CustomField>
    <fullName>Protection_Class__c</fullName>
    <label>Protection Class</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>