force-app/main/default/objects/CustomerProperty/fields/Roofing_Year__c.field-meta.xml
<CustomField>
    <fullName>Roofing_Year__c</fullName>
    <label>Roofing Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>