force-app/main/default/objects/CustomerProperty/fields/Wiring_Year__c.field-meta.xml
<CustomField>
    <fullName>Wiring_Year__c</fullName>
    <label>Wiring Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>